--- a/public/style.css
+++ b/public/style.css
@@ -117,3 +117,36 @@ left:930px;
 /* width:1280px;
 height:1200px; */
 }
+
+h1{
+  text-align: center;
+  font-size: 50px;
+}
+
+.button {
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  position: relative; 
+}
+
+.button a{
+  color: #ffffff;
+}
+
+.button1 {background-color: #000000;}
+
+#myframe {
+widows: 400px;
+height:230 px;
+position:absolute;
+left:30%;
+top:20%;
+margin:-75px 0 0 -135px;
+}
