--- a/public/style.css
+++ b/public/style.css
@@ -77,7 +77,7 @@ label #btn{
 
 label #cancel{
   z-index: 1111;
-  left: -195px;
+  left: -200px;
   top: 23px;
   font-size: 13px;
   color: #ffffff;
@@ -167,4 +167,15 @@ margin:-75px 0 0 -135px;
   left:50%;
   top:40%;
   margin:-75px 0 0 -135px;
+  }
+
+  input {
+    padding: 15px;
+    box-sizing: border-box;
+    background: rgb(158, 158, 158);
+    display: block;
+    width: 15%;
+    background: rgb(255, 253, 253);
+    font-family: Open Sans;
+    font-size: 18px;
   }
