--- a/public/style.css
+++ b/public/style.css
@@ -143,8 +143,8 @@ h1{
 .button1 {background-color: #000000;}
 
 #myframe {
-widows: 400px;
-height:230 px;
+widows: 500px;
+height:300 px;
 position:absolute;
 left:30%;
 top:20%;
@@ -180,11 +180,18 @@ margin:-75px 0 0 -135px;
     font-size: 18px;
   }
 
-  button{
-    background-color: #050505; /* Green background */
-    border: 1px solid rgb(0, 0, 0); /* Green border */
-    color: rgb(255, 255, 255); /* White text */
-    padding: 10px 24px; /* Some padding */
-    cursor: pointer; /* Pointer/hand icon */
-    float: center; /* Float the buttons side by side */
+  /* button{
+    background-color: #050505; Green background */
+    /* border: 1px solid rgb(0, 0, 0); Green border */
+    /* color: rgb(255, 255, 255); White text */
+    /* padding: 10px 24px; Some padding */
+    /* cursor: pointer; Pointer/hand icon */
+    /* float: center; Float the buttons side by side */
+  /* } */ 
+
+  #google{
+    position:absolute;
+    left:80%;
+    top:40%;
+     margin:-75px 0 0 -135px;
   }
