--- a/public/css/home/style.css
+++ b/public/css/home/style.css
@@ -142,6 +142,7 @@ h1{
 
 .button1 {background-color: #000000;}
 
+
 #myframe {
 widows: 500px;
 height:300 px;
@@ -195,3 +196,58 @@ margin:-75px 0 0 -135px;
     top:40%;
      margin:-75px 0 0 -135px;
   }
+
+/* 
+ .btn-group{
+  width: 30%;
+  justify-content: center;
+  text-align: center;
+  background-color: #000000; 
+  border: 1px solid rgb(0, 0, 0); 
+  color: rgb(0, 0, 0); 
+  padding: 10px 24px; 
+}
+
+  #mute{
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin: 2px 2px;
+    cursor: pointer;
+    position: relative; 
+  }
+
+  #camera{
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin: 2px 2px;
+    cursor: pointer;
+    position: relative; 
+  }
+  */
+
+
+.icon-bar {
+  position: fixed;
+  top: 30%;
+  right: 3%;
+  width: 90px;
+  background-color: rgb(0, 0, 0);
+}
+
+.icon-bar a {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  color: white;
+  font-size: 36px;
+}
